// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioField should render correctly 1`] = `
<DocumentFragment>
  .cache-7cwb2t {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-7cwb2t[aria-disabled='false'] {
  cursor: pointer;
}

.cache-7cwb2t:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-7cwb2t:hover[aria-disabled='false'] .e1duuirp1[id=test-test]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-7cwb2t:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-7cwb2t:hover[aria-disabled='false'] .e1duuirp1[id=test-test][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-7cwb2t[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-7cwb2t[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-7cwb2t[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-7cwb2t e1duuirp0"
      data-checked="false"
      for="test-test"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-invalid="false"
        class="cache-dhqfi e1duuirp1"
        id="test-test"
        name="test"
        tabindex="0"
        type="radio"
        value="test"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-o0ahz {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-o0ahz[aria-disabled='false'] {
  cursor: pointer;
}

.cache-o0ahz:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-o0ahz:hover[aria-disabled='false'] .e1duuirp1[id=test-checked]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-o0ahz:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-o0ahz:hover[aria-disabled='false'] .e1duuirp1[id=test-checked][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-o0ahz[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-o0ahz[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-o0ahz[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-o0ahz e1duuirp0"
      data-checked="true"
      for="test-checked"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-dhqfi e1duuirp1"
        id="test-checked"
        name="test"
        tabindex="0"
        type="radio"
        value="checked"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field checked
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-11xftmf {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-11xftmf[aria-disabled='false'] {
  cursor: pointer;
}

.cache-11xftmf:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-11xftmf:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-11xftmf:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-11xftmf:hover[aria-disabled='false'] .e1duuirp1[id=test-disabled][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-11xftmf[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-11xftmf[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-11xftmf[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="true"
      class="cache-11xftmf e1duuirp0"
      data-checked="false"
      for="test-disabled"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        aria-invalid="false"
        class="cache-dhqfi e1duuirp1"
        disabled=""
        id="test-disabled"
        name="test"
        style="pointer-events: none;"
        type="radio"
        value="disabled"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field disabled
    </label>
  </form>
</DocumentFragment>
`;

exports[`RadioField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-pxuo8u {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
}

.cache-pxuo8u[aria-disabled='false'] {
  cursor: pointer;
}

.cache-pxuo8u:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-pxuo8u:hover[aria-disabled='false'] .e1duuirp1[id=test-events]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-pxuo8u:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-pxuo8u:hover[aria-disabled='false'] .e1duuirp1[id=test-events][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-pxuo8u[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-pxuo8u[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-pxuo8u[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-dhqfi {
  opacity: 0.01;
  width: px;
  height: px;
  position: absolute;
  cursor: pointer;
}

.cache-dhqfi+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-dhqfi[aria-checked='true']+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-dhqfi[aria-checked='true'][aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #390171;
}

.cache-dhqfi[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-dhqfi:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #390171;
}

.cache-dhqfi:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-dhqfi[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-jsk10b {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-jsk10b .e1duuirp4 {
  fill: #ffffff;
}

.cache-1e98oqk {
  fill: #ffffff;
}

<form
    novalidate=""
  >
    <label
      aria-disabled="false"
      class="cache-pxuo8u e1duuirp0"
      data-checked="true"
      for="test-events"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-invalid="false"
        class="cache-dhqfi e1duuirp1"
        id="test-events"
        name="test"
        tabindex="0"
        type="radio"
        value="events"
      />
      <svg
        class="cache-jsk10b e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-1e98oqk e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-0 e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
      Radio field events
    </label>
  </form>
</DocumentFragment>
`;
